fix z-index

--- a/sass/_module.scss
+++ b/sass/_module.scss
@@ -109,7 +109,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 0;
+  z-index: -1;
   @include tab{
     font-size: 64px;
   }
