--- a/sass/style.css
+++ b/sass/style.css
@@ -342,7 +342,7 @@ select:focus {
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 0;
+  z-index: -1;
 }
 @media (max-width: 992px) {
   .section-deco-text {
